tests/src/frontend/typechecking/invalid/memo_mut_4.sk
class Foo() {
  memoized fun no<T: readonly Show>(T): void {
    void
  }
}

mutable class X(mutable v: Int) uses Show {
  readonly fun toString(): String {
    this.v.toString()
  }
}

fun no(): void {
  Foo().no(mutable X(42))
}
